[package]
name = "tokio-inotify"
version = "0.5.0"
authors = ["Sherlock Holo <sherlockya@gmail.com>", "Lewin Bormann <lewin@lewin-bormann.info>"]
license = "MIT"
keywords = ["inotify", "tokio", "async", "filesystem"]
description = "Stream-based access to filesystem events."
repository = "https://github.com/Sherlock-Holo/tokio-inotify"
#documentation = "https://docs.rs/tokio-inotify"
edition = "2018"

[dependencies]
futures = "0.3"
inotify = "0.8"
tokio = { version = "0.2", features = ["sync", "macros"] }
mio = { version = "0.7.0-alpha.1", features = ["os-util", "os-poll"] }

[dev-dependencies]
tempfile = "3.1"
tokio = { version = "0.2", features = ["rt-core", "sync", "macros", "fs"] }